set isEnsemble=true

--- a/DATA/PROJECT/testImportCSV/testImportSettings.ini
+++ b/DATA/PROJECT/testImportCSV/testImportSettings.ini
@@ -8,7 +8,7 @@ meteoGrid="../../METEOGRID/DBGridXML_ERG5_ecmwf_test.xml"
 inputData=./inputData
 var="DAILY_TMIN,DAILY_TMAX"
 isDaily=true
-isEnsemble=false
+isEnsemble=true
 
 
 
