--- a/DATA/PROJECT/testImportCSV/testImportSettings.ini
+++ b/DATA/PROJECT/testImportCSV/testImportSettings.ini
@@ -4,11 +4,11 @@ software="csv2dbGrid"
 [project]
 name="testImportCSV"
 meteoGrid="../../METEOGRID/DBGridXML_ERG5_ecmwf_test.xml"
-inputData=./inputData
+csvPath=./inputData
 var="DAILY_TMIN,DAILY_TMAX"
 isDaily=true
 isEnsemble=true
-precipitationIsProgressive=false 
+isPrecipitationProgressive=false 
 
 
 
