--- a/DATA/PROJECT/testImportCSV/testImportSettings.ini
+++ b/DATA/PROJECT/testImportCSV/testImportSettings.ini
@@ -1,11 +1,11 @@
 [software]
-software="csv2dbGrid"
+software=csv2dbGrid
 
 [project]
-name="testImportCSV"
-meteoGrid="../../METEOGRID/DBGridXML_ERG5_ecmwf_test.xml"
+name=testImportCSV
+meteoGrid=../../METEOGRID/DBGridXML_ERG5_ecmwf_test.xml
 csvPath=./inputData
-var="DAILY_TMIN,DAILY_TMAX"
+var="DAILY_TMIN,DAILY_TMAX,DAILY_PREC"
 isDaily=true
 isEnsemble=true
 isPrecipitationProgressive=false 
