fix date convention

--- a/DATA/PROJECT/testImportCSV/testImportSettings.ini
+++ b/DATA/PROJECT/testImportCSV/testImportSettings.ini
@@ -4,7 +4,7 @@ software=csv2dbGrid
 [project]
 name=testImportCSV
 meteoGrid=../../METEOGRID/DBGridXML_ERG5_ecmwf_test.xml
-csvPath=./inputData
+csvPath=./inputData/csv
 var="DAILY_TMIN,DAILY_TMAX,DAILY_PREC"
 isDaily=true
 isEnsemble=true
