--- a/DATA/PROJECT/testIFSimportCSV/testIFSImportSettings.ini
+++ b/DATA/PROJECT/testIFSimportCSV/testIFSImportSettings.ini
@@ -9,15 +9,11 @@ time_zone=1
 is_utc=true
 
 [project]
-name=testHRESimportCSV
+name=testIFSimportCSV
 meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
 csvPath=./inputData/20210519
-var="RAD,NET_RAD"
+var="PREC,RHAVG,TAVG,W_VEC_DIR,W_VEC_INT"
 isDaily=false
 isEnsemble=false
 isPrecipitationProgressive=false 
 radConversion=false
-
-
-
-
