--- a/DATA/PROJECT/importEnsembleDailyECMWF/importEnsembleDailyECMWFSettings.ini
+++ b/DATA/PROJECT/importEnsembleDailyECMWF/importEnsembleDailyECMWFSettings.ini
@@ -2,9 +2,9 @@
 software=csv2dbGrid
 
 [project]
-name=testImportCSV
-meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
-csvPath=./inputData/20210331
+name=importCSV
+meteoGrid=../../METEOGRID/DBGridXML_ERG5_ecmwf_daily.xml
+csvPath=./inputData
 var="DAILY_TMIN,DAILY_TMAX,DAILY_PREC"
 isDaily=true
 isEnsemble=true
