--- a/DATA/PROJECT/importEnsembleDailyECMWF/importEnsembleDailyECMWFSettings.ini
+++ b/DATA/PROJECT/importEnsembleDailyECMWF/importEnsembleDailyECMWFSettings.ini
@@ -8,7 +8,9 @@ csvPath=./inputData
 var="DAILY_TMIN,DAILY_TMAX,DAILY_PREC"
 isDaily=true
 isEnsemble=true
-isPrecipitationProgressive=false 
+isPrecipitationProgressive=false
+isDeleteOldData=true
+nrStoredDays=30
 
 
 
