remove folder data .ini

--- a/DATA/PROJECT/testIFSimportCSV/testIFSImportSettings.ini
+++ b/DATA/PROJECT/testIFSimportCSV/testIFSImportSettings.ini
@@ -11,7 +11,7 @@ is_utc=true
 [project]
 name=testIFSimportCSV
 meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
-csvPath=./inputData/20210524
+csvPath=./inputData/
 var="PREC,RHAVG,TAVG,W_VEC_DIR,W_VEC_INT"
 isDaily=false
 isEnsemble=false
