grid DBGridXML_Highlander_Romagna.xml

--- a/DATA/PROJECT/testCMCC/testCMCCSettings.ini
+++ b/DATA/PROJECT/testCMCC/testCMCCSettings.ini
@@ -10,7 +10,7 @@ is_utc=true
 
 [project]
 name=testCMCC
-#meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
+meteoGrid=../../METEOGRID/DBGridXML_Highlander_Romagna.xml
 csvPath=./inputData/
 var="DAILY_TMIN"
 isDaily=true
