--- a/DATA/PROJECT/testFrostForecast/testFrostForecastSettings.ini
+++ b/DATA/PROJECT/testFrostForecast/testFrostForecastSettings.ini
@@ -14,7 +14,7 @@ meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
 meteo_points=../../METEOPOINT/frost.db
 csvPath=./outputData/
 id="4,10,2303,6257,6265"
-
+arkIdVar="158,160,139,409,166,165"
 
 [reuter_param]
 intercept=1.969822, 1.775462, 3.016488, 2.271830, 2.367134
@@ -23,5 +23,6 @@ parRHss=-0.014889, -0.013332, -0.014434, -0.020210, -0.011935
 SE_intercept=0.182930, 0.249670, 0.169418, 0.332520, 0.274008
 SE_parTss=0.012427, 0.014025, 0.009732, 0.018650, 0.014905
 SE_parRHss=0.001691, 0.002694, 0.001781, 0.003540, 0.002943
+
 
 
