--- a/DATA/PROJECT/testFrostForecast/testFrostForecastSettings.ini
+++ b/DATA/PROJECT/testFrostForecast/testFrostForecastSettings.ini
@@ -1,28 +1,25 @@
-[software]
-software=frostForecast
-
 [location]
-lat=44.5
-lon=11.35
-utm_zone=32
-time_zone=1
 is_utc=true
+lat=44.501
+lon=11.329
+time_zone=1
+utm_zone=32
 
 [project]
-name=testFrostForecast
-meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
-meteo_points=../../METEOPOINT/frost.db
 csvPath=./outputData/
 id="4,10,2303,6257,6265"
-arkIdVar="158,160,139,409,166,165"
+meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
+meteo_points=../../METEOPOINT/frost.db
+name=testFrostForecast
+var="TAVG,RHAVG,W_SCAL_INT,W_VEC_DIR,PREC,RAD"
 
 [reuter_param]
-intercept=1.969822, 1.775462, 3.016488, 2.271830, 2.367134
-parTss=0.093746, 0.129308, 0.079078, 0.133310, 0.106645
-parRHss=-0.014889, -0.013332, -0.014434, -0.020210, -0.011935
-SE_intercept=0.182930, 0.249670, 0.169418, 0.332520, 0.274008
-SE_parTss=0.012427, 0.014025, 0.009732, 0.018650, 0.014905
-SE_parRHss=0.001691, 0.002694, 0.001781, 0.003540, 0.002943
+SE_intercept="0.182930, 0.249670, 0.169418, 0.332520, 0.274008"
+SE_parRHss="0.001691, 0.002694, 0.001781, 0.003540, 0.002943"
+SE_parTss="0.012427, 0.014025, 0.009732, 0.018650, 0.014905"
+intercept="1.969822, 1.775462, 3.016488, 2.271830, 2.367134"
+parRHss="-0.014889, -0.013332, -0.014434, -0.020210, -0.011935"
+parTss="0.093746, 0.129308, 0.079078, 0.133310, 0.106645"
 
-
-
+[software]
+software=frostForecast
