--- a/DATA/PROJECT/testHighlanderBias/testHighlanderBiasSettings.ini
+++ b/DATA/PROJECT/testHighlanderBias/testHighlanderBiasSettings.ini
@@ -17,5 +17,5 @@ var="DAILY_TMIN,DAILY_TMAX,DAILY_PREC"
 method=quantileMapping
 firstDate=1991-01-01
 lastDate=2020-12-31
-dbClimate=
+dbClimate=./dbClimate.db
 
