--- a/DATA/PROJECT/testHighlanderBias/testHighlanderBiasSettings.ini
+++ b/DATA/PROJECT/testHighlanderBias/testHighlanderBiasSettings.ini
@@ -13,8 +13,7 @@ name=testHighlanderBias
 refererenceMeteoGrid=../../METEOGRID/DBGridXML_Eraclito4.xml 
 inputMeteoGrid=../../METEOGRID/DBGridXML_Highlander_Romagna.xml
 outputMeteoGrid=../../METEOGRID/DBGridXML_Highlander_Romagna_BiasCorrection.xml
-#var="DAILY_TMIN,DAILY_TMAX,DAILY_PREC"
-var="DAILY_TMAX"
+var="DAILY_TMIN,DAILY_TMAX,DAILY_PREC"
 method=quantileMapping
 firstDate=1991-01-01
 lastDate=2020-12-31
