--- a/DATA/PROJECT/testFrostForecast/testFrostForecastSettings.ini
+++ b/DATA/PROJECT/testFrostForecast/testFrostForecastSettings.ini
@@ -7,19 +7,19 @@ utm_zone=32
 
 [project]
 csvPath=./outputData/
-id=4, 10, 2303, 6257, 6265
+id=10, 2303, 4, 6257, 6265
 meteoGrid=../../METEOGRID/DBGridXML_ERG5_forecast.xml
 meteo_points=../../METEOPOINT/frost.db
 name=testFrostForecast
 var=TAVG, RHAVG, W_SCAL_INT, W_VEC_DIR, PREC, RAD
 
 [reuter_param]
-SE_intercept=0.182930, 0.249670, 0.169418, 0.332520, 0.274008
-SE_parRHss=0.001691, 0.002694, 0.001781, 0.003540, 0.002943
-SE_parTss=0.012427, 0.014025, 0.009732, 0.018650, 0.014905
-intercept=1.969822, 1.775462, 3.016488, 2.271830, 2.367134
-parRHss=-0.014889, -0.013332, -0.014434, -0.020210, -0.011935
-parTss=0.093746, 0.129308, 0.079078, 0.133310, 0.106645
+SE_intercept=0.828828, 0.686601, 1.1214, 0.860431, 0.80801
+SE_parRHss=0.0135157, 0.00730847, 0.0114874, 0.0086849, 0.00946383
+SE_parTss=0.0352816, 0.0361903, 0.071321, 0.0539038, 0.0618859
+intercept=0.962341, 1.62691, 2.03532, 3.51231, 2.8668
+parRHss=-0.00680256, -0.00743306, -0.0087477, -0.0158044, -0.0101946
+parTss=0.169814, 0.132898, 0.0573901, 0.0189119, 0.0370224
 
 [calibration]
 monthIni=3
